Fix missing border from popup Calendar

--- a/styles/kendo.common.css
+++ b/styles/kendo.common.css
@@ -1503,7 +1503,6 @@ span.k-dropdown
     border: 1px solid transparent;
 }
 
-.k-calendar-container.k-state-border-up,
 .k-list-container.k-state-border-up,
 .k-autocomplete.k-state-border-up,
 .k-dropdown-wrap.k-state-border-up,
@@ -1520,7 +1519,6 @@ span.k-dropdown
     top: 1px;
 }
 
-.k-calendar-container.k-state-border-down,
 .k-list-container.k-state-border-down,
 .k-autocomplete.k-state-border-down,
 .k-dropdown-wrap.k-state-border-down,
